// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ExtensionInstallCard > error variant snapshot for incompatible_version 1`] = `
<DocumentFragment>
  <div
    class="w-full max-w-md p-3 rounded-xl bg-red-950/20 border border-red-800/40 text-zinc-100 shadow-xl flex flex-col gap-2"
  >
    <div
      class="flex items-start gap-2.5"
    >
      <span
        class="inline-flex items-center justify-center w-5 h-5 rounded-full bg-red-500/20 text-red-300 shrink-0"
      >
        <svg
          fill="none"
          height="12"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="12"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <line
            x1="12"
            x2="12"
            y1="8"
            y2="13"
          />
          <circle
            cx="12"
            cy="16.5"
            fill="currentColor"
            r="0.5"
          />
        </svg>
      </span>
      <div
        class="min-w-0 flex-1"
      >
        <div
          class="text-xs font-bold text-red-200"
        >
          Erro ao instalar
        </div>
        <div
          class="mt-0.5 text-[10px] text-zinc-300 break-words line-clamp-2"
        >
          Versão 0.4.0 requer MomAI &gt;=2.0.0
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ExtensionInstallCard > progress variant snapshot 1`] = `
<DocumentFragment>
  <div
    class="w-full max-w-md p-3 rounded-xl bg-zinc-900 border border-white/5 text-zinc-100 shadow-xl flex flex-col gap-2"
  >
    <div
      class="flex items-center justify-between text-xs font-semibold"
    >
      <span
        class="text-zinc-200 truncate max-w-[150px]"
      >
        WhatsApp
      </span>
      <span
        class="text-[10px] text-amber-500 font-bold uppercase tracking-wider shrink-0"
      >
        extensions.stages.downloading
      </span>
    </div>
    <div
      class="w-full h-1.5 rounded-full bg-zinc-800 overflow-hidden"
    >
      <div
        class="h-full bg-amber-500 transition-all duration-200"
        style="width: 25%;"
      />
    </div>
    <div
      class="text-[10px] text-zinc-500 font-medium truncate"
    >
      87.2 KB / 184.1 KB · 22.9 KB/s · 4s restantes
    </div>
  </div>
</DocumentFragment>
`;

exports[`ExtensionInstallCard > renders stage done 1`] = `
<DocumentFragment>
  <div
    class="w-full max-w-md p-3 rounded-xl bg-zinc-900 border border-white/5 text-zinc-100 shadow-xl flex flex-col gap-2"
  >
    <div
      class="flex items-center justify-between text-xs font-semibold"
    >
      <span
        class="text-zinc-200 truncate max-w-[150px]"
      >
        WhatsApp
      </span>
      <span
        class="text-[10px] text-amber-500 font-bold uppercase tracking-wider shrink-0"
      >
        extensions.stages.done
      </span>
    </div>
    <div
      class="w-full h-1.5 rounded-full bg-zinc-800 overflow-hidden"
    >
      <div
        class="h-full bg-amber-500 transition-all duration-200"
        style="width: 25%;"
      />
    </div>
    <div
      class="text-[10px] text-zinc-500 font-medium truncate"
    >
      87.2 KB / 184.1 KB · 22.9 KB/s · 4s restantes
    </div>
  </div>
</DocumentFragment>
`;

exports[`ExtensionInstallCard > renders stage downloading 1`] = `
<DocumentFragment>
  <div
    class="w-full max-w-md p-3 rounded-xl bg-zinc-900 border border-white/5 text-zinc-100 shadow-xl flex flex-col gap-2"
  >
    <div
      class="flex items-center justify-between text-xs font-semibold"
    >
      <span
        class="text-zinc-200 truncate max-w-[150px]"
      >
        WhatsApp
      </span>
      <span
        class="text-[10px] text-amber-500 font-bold uppercase tracking-wider shrink-0"
      >
        extensions.stages.downloading
      </span>
    </div>
    <div
      class="w-full h-1.5 rounded-full bg-zinc-800 overflow-hidden"
    >
      <div
        class="h-full bg-amber-500 transition-all duration-200"
        style="width: 25%;"
      />
    </div>
    <div
      class="text-[10px] text-zinc-500 font-medium truncate"
    >
      87.2 KB / 184.1 KB · 22.9 KB/s · 4s restantes
    </div>
  </div>
</DocumentFragment>
`;

exports[`ExtensionInstallCard > renders stage extracting 1`] = `
<DocumentFragment>
  <div
    class="w-full max-w-md p-3 rounded-xl bg-zinc-900 border border-white/5 text-zinc-100 shadow-xl flex flex-col gap-2"
  >
    <div
      class="flex items-center justify-between text-xs font-semibold"
    >
      <span
        class="text-zinc-200 truncate max-w-[150px]"
      >
        WhatsApp
      </span>
      <span
        class="text-[10px] text-amber-500 font-bold uppercase tracking-wider shrink-0"
      >
        extensions.stages.extracting
      </span>
    </div>
    <div
      class="w-full h-1.5 rounded-full bg-zinc-800 overflow-hidden"
    >
      <div
        class="h-full bg-amber-500 transition-all duration-200"
        style="width: 25%;"
      />
    </div>
    <div
      class="text-[10px] text-zinc-500 font-medium truncate"
    >
      87.2 KB / 184.1 KB · 22.9 KB/s · 4s restantes
    </div>
  </div>
</DocumentFragment>
`;

exports[`ExtensionInstallCard > renders stage indexing 1`] = `
<DocumentFragment>
  <div
    class="w-full max-w-md p-3 rounded-xl bg-zinc-900 border border-white/5 text-zinc-100 shadow-xl flex flex-col gap-2"
  >
    <div
      class="flex items-center justify-between text-xs font-semibold"
    >
      <span
        class="text-zinc-200 truncate max-w-[150px]"
      >
        WhatsApp
      </span>
      <span
        class="text-[10px] text-amber-500 font-bold uppercase tracking-wider shrink-0"
      >
        extensions.stages.indexing
      </span>
    </div>
    <div
      class="w-full h-1.5 rounded-full bg-zinc-800 overflow-hidden"
    >
      <div
        class="h-full bg-amber-500 transition-all duration-200"
        style="width: 25%;"
      />
    </div>
    <div
      class="text-[10px] text-zinc-500 font-medium truncate"
    >
      87.2 KB / 184.1 KB · 22.9 KB/s · 4s restantes
    </div>
  </div>
</DocumentFragment>
`;

exports[`ExtensionInstallCard > renders stage linking_deps 1`] = `
<DocumentFragment>
  <div
    class="w-full max-w-md p-3 rounded-xl bg-zinc-900 border border-white/5 text-zinc-100 shadow-xl flex flex-col gap-2"
  >
    <div
      class="flex items-center justify-between text-xs font-semibold"
    >
      <span
        class="text-zinc-200 truncate max-w-[150px]"
      >
        WhatsApp
      </span>
      <span
        class="text-[10px] text-amber-500 font-bold uppercase tracking-wider shrink-0"
      >
        extensions.stages.linking_deps
      </span>
    </div>
    <div
      class="w-full h-1.5 rounded-full bg-zinc-800 overflow-hidden"
    >
      <div
        class="h-full bg-amber-500 transition-all duration-200"
        style="width: 25%;"
      />
    </div>
    <div
      class="text-[10px] text-zinc-500 font-medium truncate"
    >
      87.2 KB / 184.1 KB · 22.9 KB/s · 4s restantes
    </div>
  </div>
</DocumentFragment>
`;

exports[`ExtensionInstallCard > renders stage starting_worker 1`] = `
<DocumentFragment>
  <div
    class="w-full max-w-md p-3 rounded-xl bg-zinc-900 border border-white/5 text-zinc-100 shadow-xl flex flex-col gap-2"
  >
    <div
      class="flex items-center justify-between text-xs font-semibold"
    >
      <span
        class="text-zinc-200 truncate max-w-[150px]"
      >
        WhatsApp
      </span>
      <span
        class="text-[10px] text-amber-500 font-bold uppercase tracking-wider shrink-0"
      >
        extensions.stages.starting_worker
      </span>
    </div>
    <div
      class="w-full h-1.5 rounded-full bg-zinc-800 overflow-hidden"
    >
      <div
        class="h-full bg-amber-500 transition-all duration-200"
        style="width: 25%;"
      />
    </div>
    <div
      class="text-[10px] text-zinc-500 font-medium truncate"
    >
      87.2 KB / 184.1 KB · 22.9 KB/s · 4s restantes
    </div>
  </div>
</DocumentFragment>
`;

exports[`ExtensionInstallCard > renders stage verifying 1`] = `
<DocumentFragment>
  <div
    class="w-full max-w-md p-3 rounded-xl bg-zinc-900 border border-white/5 text-zinc-100 shadow-xl flex flex-col gap-2"
  >
    <div
      class="flex items-center justify-between text-xs font-semibold"
    >
      <span
        class="text-zinc-200 truncate max-w-[150px]"
      >
        WhatsApp
      </span>
      <span
        class="text-[10px] text-amber-500 font-bold uppercase tracking-wider shrink-0"
      >
        extensions.stages.verifying
      </span>
    </div>
    <div
      class="w-full h-1.5 rounded-full bg-zinc-800 overflow-hidden"
    >
      <div
        class="h-full bg-amber-500 transition-all duration-200"
        style="width: 25%;"
      />
    </div>
    <div
      class="text-[10px] text-zinc-500 font-medium truncate"
    >
      87.2 KB / 184.1 KB · 22.9 KB/s · 4s restantes
    </div>
  </div>
</DocumentFragment>
`;
